--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-"streamlit>=1.37" 
-"pandas>=2.0" 
-"pandasql>=0.7" 
-"openpyxl" 
-"scikit-learn>=1.2" 
+streamlit>=1.37
+pandas>=2.0
+pandasql>=0.7
+openpyxl
+scikit-learn
