--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,152 @@
-streamlit>=1.37
-pandas>=2.0
-pandasql>=0.7
-openpyxl
-scikit-learn
+absl-py==2.1.0
+adjustText==1.3.0
+altair==5.5.0
+annotated-types==0.7.0
+astunparse==1.6.3
+attrs==25.3.0
+blinker==1.9.0
+blis==1.2.0
+cachetools==6.2.0
+catalogue==2.0.10
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+choreographer==1.0.10
+click==8.1.8
+cloudpathlib==0.20.0
+cmdstanpy==1.2.5
+colorama==0.4.6
+confection==0.1.5
+contourpy==1.2.1
+cycler==0.12.1
+cymem==2.0.11
+et_xmlfile==2.0.0
+fastai==2.7.18
+fastcore==1.7.29
+fastdownload==0.0.7
+fastprogress==1.0.3
+filelock==3.17.0
+flatbuffers==25.2.10
+fonttools==4.53.1
+fsspec==2025.2.0
+gast==0.6.0
+gitdb==4.0.12
+GitPython==3.1.45
+google-pasta==0.2.0
+greenlet==3.2.4
+grpcio==1.70.0
+h11==0.14.0
+h5py==3.12.1
+holidays==0.79
+huggingface-hub==0.28.1
+idna==3.10
+importlib_resources==6.5.2
+Jinja2==3.1.5
+joblib==1.4.2
+jsonschema==4.25.1
+jsonschema-specifications==2025.4.1
+kaleido==1.0.0
+keras==3.8.0
+kiwisolver==1.4.5
+langcodes==3.5.0
+language_data==1.3.0
+libclang==18.1.1
+lightgbm==4.5.0
+logistro==1.1.0
+marisa-trie==1.2.1
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.9.2
+mdurl==0.1.2
+ml-dtypes==0.4.1
+mpmath==1.3.0
+msedge-selenium-tools==3.141.4
+murmurhash==1.0.12
+namex==0.0.8
+narwhals==2.3.0
+networkx==3.4.2
+nltk==3.9.1
+numpy==2.0.1
+openpyxl==3.1.5
+opt_einsum==3.4.0
+optree==0.14.0
+orjson==3.11.3
+outcome==1.3.0.post0
+packaging==24.1
+pandas==2.2.2
+pandasql==0.7.3
+pillow==10.4.0
+plotly==6.3.0
+preshed==3.0.9
+prophet==1.1.7
+protobuf==5.29.3
+pyarrow==21.0.0
+pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
+pydeck==0.9.1
+Pygments==2.19.1
+pyparsing==3.1.2
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+rich==13.9.4
+rpds-py==0.27.1
+safetensors==0.5.2
+scikit-learn==1.6.1
+scipy==1.14.0
+seaborn==0.13.2
+selenium==3.141.0
+setuptools==75.8.0
+shellingham==1.5.4
+simplejson==3.20.1
+six==1.16.0
+smart-open==7.1.0
+smmap==5.0.2
+sniffio==1.3.1
+somepackage==1.2.3
+sortedcontainers==2.4.0
+spacy==3.8.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SQLAlchemy==2.0.43
+srsly==2.5.1
+stanio==0.5.1
+streamlit==1.49.1
+sympy==1.13.1
+tenacity==9.1.2
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+tensorflow==2.18.0
+tensorflow_intel==2.18.0
+termcolor==2.5.0
+textblob==0.19.0
+thinc==8.3.4
+threadpoolctl==3.5.0
+tokenizers==0.21.0
+toml==0.10.2
+torch==2.5.1
+torchvision==0.20.1
+tornado==6.5.2
+tqdm==4.67.1
+transformers==4.48.3
+trio==0.29.0
+trio-websocket==0.12.2
+typer==0.15.1
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.3.0
+wasabi==1.1.3
+watchdog==6.0.0
+weasel==0.4.1
+websocket-client==1.8.0
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.2
+wsproto==1.2.0
+xgboost==2.1.4
